--- a/entrega/src/app/admin/provincia/provincia.component.html
+++ b/entrega/src/app/admin/provincia/provincia.component.html
@@ -1,5 +1,5 @@
-<div class="card">
-    <div class="card-header ch-alt m-b-20 bgm-green">
+<div class="card" >
+    <div class="card-header  bgm-green">
         <h2>Lista de Provincias
             <small>Muestra el listado de provincias del sistema</small>
         </h2>
@@ -38,58 +38,59 @@
         </button>
     </div>
 
-    <div class="card-body card-padding">
-        <mat-card class="example-card">
-            <mat-card-content style="min-height: 600px;">
-                <table mat-table [dataSource]="dataSource" matSort matSortActive="nombre" matSortDisableClear matSortDirection="desc" style="width: 100%">
-                    <!--- Note that these columns can be defined in any order.
-                          The actual rendered columns are set as a property on the row definition" -->
-                    <!-- Position Column -->
-                    <ng-container matColumnDef="index">
-                        <th mat-header-cell *matHeaderCellDef mat-sort-header> No.</th>
-                        <td mat-cell *matCellDef="let element;let i = index"> {{i+1}}</td>
-                    </ng-container>
 
-                    <ng-container matColumnDef="codigo">
-                        <th mat-header-cell *matHeaderCellDef mat-sort-header> Codigo</th>
-                        <td mat-cell *matCellDef="let element"> {{element.codigo}}</td>
-                    </ng-container>
-                    <!-- Name Column -->
-                    <ng-container matColumnDef="nombre">
-                        <th mat-header-cell *matHeaderCellDef mat-sort-header> Nombre</th>
-                        <td mat-cell *matCellDef="let element"> {{element.nombre}}</td>
-                    </ng-container>
+    <mat-card class="example-card" >
+        <mat-card-content style="min-height: 600px;">
+            <table mat-table [dataSource]="dataSource" matSort matSortActive="nombre" matSortDisableClear matSortDirection="desc" style="width: 100%">
+                <!--- Note that these columns can be defined in any order.
+                      The actual rendered columns are set as a property on the row definition" -->
+                <!-- Position Column -->
+                <ng-container matColumnDef="index">
+                    <th mat-header-cell *matHeaderCellDef mat-sort-header> No.</th>
+                    <td mat-cell *matCellDef="let element;let i = index"> {{i+1}}</td>
+                </ng-container>
 
-                    <ng-container matColumnDef="acciones" stickyEnd>
-                        <th mat-header-cell *matHeaderCellDef style="text-align: center;">Acciones</th>
-                        <td mat-cell *matCellDef="let element" align="center">
-                            <button mat-mini-fab color="accent" (click)="editarProvincia($event,element)" [matTooltip]="'Editar Provincia - ' + element.nombre">
-                                <mat-icon>mode_edit</mat-icon>
-                            </button>
-                            <button mat-mini-fab color="warn" (click)="eliminarProvincia($event,element)" [matTooltip]="'Eliminar Provincia - ' + element.nombre">
-                                <mat-icon>delete</mat-icon>
-                            </button>
-                        </td>
-                    </ng-container>
+                <ng-container matColumnDef="codigo">
+                    <th mat-header-cell *matHeaderCellDef mat-sort-header> Codigo</th>
+                    <td mat-cell *matCellDef="let element"> {{element.codigo}}</td>
+                </ng-container>
+                <!-- Name Column -->
+                <ng-container matColumnDef="nombre">
+                    <th mat-header-cell *matHeaderCellDef mat-sort-header> Nombre</th>
+                    <td mat-cell *matCellDef="let element"> {{element.nombre}}</td>
+                </ng-container>
 
-                    <ng-container matColumnDef="expandedDetail">
-                        <td mat-cell *matCellDef="let element" [attr.colspan]="displayedColumns.length">
-                            <div class="example-element-detail"
-                                 [@detailExpand]="element.expandido ? 'expanded' : 'collapsed'">
-                                <div class="element-description">
-                                    <span class="element-description-attribution">{{element.detalles}}</span>
-                                </div>
+                <ng-container matColumnDef="acciones" stickyEnd>
+                    <th mat-header-cell *matHeaderCellDef style="text-align: center;">Acciones</th>
+                    <td mat-cell *matCellDef="let element" align="center">
+                        <button mat-mini-fab color="accent" (click)="editarProvincia($event,element)" [matTooltip]="'Editar Provincia - ' + element.nombre">
+                            <mat-icon>mode_edit</mat-icon>
+                        </button>
+                        <button mat-mini-fab color="warn" (click)="eliminarProvincia($event,element)" [matTooltip]="'Eliminar Provincia - ' + element.nombre">
+                            <mat-icon>delete</mat-icon>
+                        </button>
+                    </td>
+                </ng-container>
+
+                <ng-container matColumnDef="expandedDetail">
+                    <td mat-cell *matCellDef="let element" [attr.colspan]="displayedColumns.length">
+                        <div class="example-element-detail"
+                             [@detailExpand]="element.expandido ? 'expanded' : 'collapsed'">
+                            <div class="element-description">
+                                <span class="element-description-attribution">{{element.detalles}}</span>
                             </div>
-                        </td>
-                    </ng-container>
+                        </div>
+                    </td>
+                </ng-container>
 
-                    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-                    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-                </table>
-            </mat-card-content>
-            <mat-card-actions>
-                <mat-paginator [length]="resultsLength" [pageSize]="pageSize" [pageSizeOptions]="[10, 15, 20]" showFirstLastButtons></mat-paginator>
-            </mat-card-actions>
-        </mat-card>
-    </div>
+                <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+                <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+            </table>
+        </mat-card-content>
+        <mat-card-actions>
+            <mat-paginator [length]="resultsLength" [pageSize]="pageSize" [pageSizeOptions]="[10, 15, 20]" showFirstLastButtons></mat-paginator>
+        </mat-card-actions>
+    </mat-card>
+
 </div>
+
