--- a/entrega/src/app/admin/solicitud/solicitud.component.html
+++ b/entrega/src/app/admin/solicitud/solicitud.component.html
@@ -1,3 +1,89 @@
-<p>
-  solicitud works!
-</p>
+<div class="card">
+    <div class="card-header ch-alt m-b-20 bgm-green">
+        <h2>Lista de Solicitudes
+            <small>Muestra el listado de solicitudes del sistema</small>
+        </h2>
+
+        <button class="btn btn-float waves-circle waves-float" mat-fab color="primary" (click)="abrirVentana()" matTooltip="Nuevo Tipo De Solicitud">
+            <mat-icon aria-label="Example icon-button with a heart icon">add</mat-icon>
+        </button>
+    </div>
+
+    <div class="card-body card-padding" >
+        <mat-grid-list [cols]="4">
+            <mat-grid-tile [colspan]="2" [rowspan]="3">
+                <mat-card class="example-card">
+                    <mat-card-content style="min-height: 625px;">
+                        <table mat-table [dataSource]="dataSource" matSort matSortActive="numExpediente" matSortDisableClear matSortDirection="desc" style="width: 100%">
+                            <!--- Note that these columns can be defined in any order.
+                                  The actual rendered columns are set as a property on the row definition" -->
+                            <!-- Position Column -->
+                            <ng-container matColumnDef="index">
+                                <th mat-header-cell *matHeaderCellDef mat-sort-header> No.</th>
+                                <td mat-cell *matCellDef="let element;let i = index"> {{i+1}}</td>
+                            </ng-container>
+
+                            <ng-container matColumnDef="numExpediente">
+                                <th mat-header-cell *matHeaderCellDef mat-sort-header> Núm. de Exp.</th>
+                                <td mat-cell *matCellDef="let element"> {{element.numExpediente}}</td>
+                            </ng-container>
+                            <!-- Name Column -->
+                            <ng-container matColumnDef="fechaSolicitud">
+                                <th mat-header-cell *matHeaderCellDef mat-sort-header> Fecha de Solic.</th>
+                                <td mat-cell *matCellDef="let element"> {{element.fechaSolicitud}}</td>
+                            </ng-container>
+                            <!-- Name Column -->
+                            <ng-container matColumnDef="areaSolicitada">
+                                <th mat-header-cell *matHeaderCellDef mat-sort-header>Área (Ha)</th>
+                                <td mat-cell *matCellDef="let element"> {{element.areaSolicitada}}</td>
+                            </ng-container>
+                            <!-- Name Column -->
+                            <ng-container matColumnDef="estado">
+                                <th mat-header-cell *matHeaderCellDef mat-sort-header>Estado</th>
+                                <td mat-cell *matCellDef="let element"> {{element.estado}}</td>
+                            </ng-container>
+
+                            <ng-container matColumnDef="acciones" stickyEnd>
+                                <th mat-header-cell *matHeaderCellDef style="text-align: center;">Acciones</th>
+                                <td mat-cell *matCellDef="let element" align="center">
+                                    <button mat-mini-fab color="accent" (click)="editarTipoDeSuperficie($event,element)" [matTooltip]="'Editar Tipo De Superficie - ' + element.nombre">
+                                        <mat-icon>mode_edit</mat-icon>
+                                    </button>
+                                    <button mat-mini-fab color="warn" (click)="eliminarTipoDeSuperficie($event,element)" [matTooltip]="'Eliminar Tipo De Superficie - ' + element.nombre">
+                                        <mat-icon>delete</mat-icon>
+                                    </button>
+                                </td>
+                            </ng-container>
+
+                            <ng-container matColumnDef="expandedDetail">
+                                <td mat-cell *matCellDef="let element" [attr.colspan]="displayedColumns.length">
+                                    <div class="example-element-detail"
+                                         [@detailExpand]="element.expandido ? 'expanded' : 'collapsed'">
+                                        <div class="element-description">
+                                            <span class="element-description-attribution">{{element.detalles}}</span>
+                                        </div>
+                                    </div>
+                                </td>
+                            </ng-container>
+
+                            <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+                            <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+                        </table>
+                    </mat-card-content>
+                    <mat-card-actions>
+                        <mat-paginator [length]="resultsLength" [pageSize]="pageSize" [pageSizeOptions]="[10, 15, 20]" showFirstLastButtons></mat-paginator>
+                    </mat-card-actions>
+                </mat-card>
+            </mat-grid-tile>
+            <mat-grid-tile [colspan]="2" [rowspan]="1">
+                solicitante
+            </mat-grid-tile>
+            <mat-grid-tile [colspan]="2" [rowspan]="1">
+                lista de parcela solicitada
+            </mat-grid-tile>
+            <mat-grid-tile [colspan]="2" [rowspan]="1">
+                Lineas de Prodducción
+            </mat-grid-tile>
+        </mat-grid-list>
+    </div>
+</div>
