--- a/entrega/src/app/admin/solicitud/solicitud.component.html
+++ b/entrega/src/app/admin/solicitud/solicitud.component.html
@@ -18,6 +18,16 @@
                             <!--- Note that these columns can be defined in any order.
                                   The actual rendered columns are set as a property on the row definition" -->
                             <!-- Position Column -->
+                            <ng-container matColumnDef="select">
+                                <th mat-header-cell *matHeaderCellDef></th>
+                                <td mat-cell *matCellDef="let element">
+                                    <mat-radio-button (click)="isAllSelected($event, element)"
+                                                      (change)="$event ? selection.toggle(element) : null"
+                                                      [checked]="selection.isSelected(element)">
+                                    </mat-radio-button>
+                                </td>
+                            </ng-container>
+
                             <ng-container matColumnDef="index">
                                 <th mat-header-cell *matHeaderCellDef mat-sort-header> No.</th>
                                 <td mat-cell *matCellDef="let element;let i = index"> {{i+1}}</td>
@@ -79,7 +89,24 @@
                 solicitante
             </mat-grid-tile>
             <mat-grid-tile [colspan]="2" [rowspan]="1">
-                lista de parcela solicitada
+                <mat-card class="example-card">
+                    <mat-card-content style="min-height: 625px;">
+                        <table mat-table [dataSource]="parcelas" class="mat-elevation-z8">
+
+                            <!--- Note that these columns can be defined in any order.
+                                  The actual rendered columns are set as a property on the row definition" -->
+
+                            <!-- Position Column -->
+                            <ng-container matColumnDef="parcela">
+                                <th mat-header-cell *matHeaderCellDef> Parcela. </th>
+                                <td mat-cell *matCellDef="let element"> {{element.parcela}} </td>
+                            </ng-container>
+
+                            <tr mat-header-row *matHeaderRowDef="displayedColumnsParcela"></tr>
+                            <tr mat-row *matRowDef="let row; columns: displayedColumnsParcela"></tr>
+                        </table>
+                    </mat-card-content>
+                </mat-card>
             </mat-grid-tile>
             <mat-grid-tile [colspan]="2" [rowspan]="1">
                 Lineas de Prodducción
