--- a/entrega/src/app/admin/solicitud/solicitud.component.html
+++ b/entrega/src/app/admin/solicitud/solicitud.component.html
@@ -10,107 +10,77 @@
     </div>
 
     <div class="card-body card-padding" >
-        <mat-grid-list [cols]="4">
-            <mat-grid-tile [colspan]="2" [rowspan]="3">
-                <mat-card class="example-card">
-                    <mat-card-content style="min-height: 625px;">
-                        <table mat-table [dataSource]="dataSource" matSort matSortActive="numExpediente" matSortDisableClear matSortDirection="desc" style="width: 100%">
-                            <!--- Note that these columns can be defined in any order.
-                                  The actual rendered columns are set as a property on the row definition" -->
-                            <!-- Position Column -->
-                            <ng-container matColumnDef="select">
-                                <th mat-header-cell *matHeaderCellDef></th>
-                                <td mat-cell *matCellDef="let element">
-                                    <mat-radio-button (click)="isAllSelected($event, element)"
-                                                      (change)="$event ? selection.toggle(element) : null"
-                                                      [checked]="selection.isSelected(element)">
-                                    </mat-radio-button>
-                                </td>
-                            </ng-container>
+        <mat-card class="example-card">
+            <mat-card-content style="min-height: 625px;">
+                <table mat-table [dataSource]="dataSource" matSort matSortActive="numExpediente" matSortDisableClear matSortDirection="desc" style="width: 100%">
+                    <!--- Note that these columns can be defined in any order.
+                          The actual rendered columns are set as a property on the row definition" -->
+                    <!-- Position Column -->
+                    <ng-container matColumnDef="select">
+                        <th mat-header-cell *matHeaderCellDef></th>
+                        <td mat-cell *matCellDef="let element">
+                            <mat-radio-button (click)="abrirVentanaDetalles($event, element)"
+                                              (change)="$event ? selection.toggle(element) : null"
+                                              [checked]="selection.isSelected(element)">
+                            </mat-radio-button>
+                        </td>
+                    </ng-container>
 
-                            <ng-container matColumnDef="index">
-                                <th mat-header-cell *matHeaderCellDef mat-sort-header> No.</th>
-                                <td mat-cell *matCellDef="let element;let i = index"> {{i+1}}</td>
-                            </ng-container>
+                    <ng-container matColumnDef="index">
+                        <th mat-header-cell *matHeaderCellDef mat-sort-header> No.</th>
+                        <td mat-cell *matCellDef="let element;let i = index"> {{i+1}}</td>
+                    </ng-container>
 
-                            <ng-container matColumnDef="numExpediente">
-                                <th mat-header-cell *matHeaderCellDef mat-sort-header> Núm. de Exp.</th>
-                                <td mat-cell *matCellDef="let element"> {{element.numExpediente}}</td>
-                            </ng-container>
-                            <!-- Name Column -->
-                            <ng-container matColumnDef="fechaSolicitud">
-                                <th mat-header-cell *matHeaderCellDef mat-sort-header> Fecha de Solic.</th>
-                                <td mat-cell *matCellDef="let element"> {{element.fechaSolicitud}}</td>
-                            </ng-container>
-                            <!-- Name Column -->
-                            <ng-container matColumnDef="areaSolicitada">
-                                <th mat-header-cell *matHeaderCellDef mat-sort-header>Área (Ha)</th>
-                                <td mat-cell *matCellDef="let element"> {{element.areaSolicitada}}</td>
-                            </ng-container>
-                            <!-- Name Column -->
-                            <ng-container matColumnDef="estado">
-                                <th mat-header-cell *matHeaderCellDef mat-sort-header>Estado</th>
-                                <td mat-cell *matCellDef="let element"> {{element.estado}}</td>
-                            </ng-container>
+                    <ng-container matColumnDef="numExpediente">
+                        <th mat-header-cell *matHeaderCellDef mat-sort-header> Núm. de Exp.</th>
+                        <td mat-cell *matCellDef="let element"> {{element.numExpediente}}</td>
+                    </ng-container>
+                    <!-- Name Column -->
+                    <ng-container matColumnDef="fechaSolicitud">
+                        <th mat-header-cell *matHeaderCellDef mat-sort-header> Fecha de Solic.</th>
+                        <td mat-cell *matCellDef="let element"> {{element.fechaSolicitud}}</td>
+                    </ng-container>
+                    <!-- Name Column -->
+                    <ng-container matColumnDef="areaSolicitada">
+                        <th mat-header-cell *matHeaderCellDef mat-sort-header>Área (Ha)</th>
+                        <td mat-cell *matCellDef="let element"> {{element.areaSolicitada}}</td>
+                    </ng-container>
+                    <!-- Name Column -->
+                    <ng-container matColumnDef="estado">
+                        <th mat-header-cell *matHeaderCellDef mat-sort-header>Estado</th>
+                        <td mat-cell *matCellDef="let element"> {{element.estado}}</td>
+                    </ng-container>
 
-                            <ng-container matColumnDef="acciones" stickyEnd>
-                                <th mat-header-cell *matHeaderCellDef style="text-align: center;">Acciones</th>
-                                <td mat-cell *matCellDef="let element" align="center">
-                                    <button mat-mini-fab color="accent" (click)="editarTipoDeSuperficie($event,element)" [matTooltip]="'Editar Tipo De Superficie - ' + element.nombre">
-                                        <mat-icon>mode_edit</mat-icon>
-                                    </button>
-                                    <button mat-mini-fab color="warn" (click)="eliminarTipoDeSuperficie($event,element)" [matTooltip]="'Eliminar Tipo De Superficie - ' + element.nombre">
-                                        <mat-icon>delete</mat-icon>
-                                    </button>
-                                </td>
-                            </ng-container>
+                    <ng-container matColumnDef="acciones" stickyEnd>
+                        <th mat-header-cell *matHeaderCellDef style="text-align: center;">Acciones</th>
+                        <td mat-cell *matCellDef="let element" align="center">
+                            <button mat-mini-fab color="accent" (click)="editarTipoDeSuperficie($event,element)" [matTooltip]="'Editar Tipo De Superficie - ' + element.nombre">
+                                <mat-icon>mode_edit</mat-icon>
+                            </button>
+                            <button mat-mini-fab color="warn" (click)="eliminarTipoDeSuperficie($event,element)" [matTooltip]="'Eliminar Tipo De Superficie - ' + element.nombre">
+                                <mat-icon>delete</mat-icon>
+                            </button>
+                        </td>
+                    </ng-container>
 
-                            <ng-container matColumnDef="expandedDetail">
-                                <td mat-cell *matCellDef="let element" [attr.colspan]="displayedColumns.length">
-                                    <div class="example-element-detail"
-                                         [@detailExpand]="element.expandido ? 'expanded' : 'collapsed'">
-                                        <div class="element-description">
-                                            <span class="element-description-attribution">{{element.detalles}}</span>
-                                        </div>
-                                    </div>
-                                </td>
-                            </ng-container>
+                    <ng-container matColumnDef="expandedDetail">
+                        <td mat-cell *matCellDef="let element" [attr.colspan]="displayedColumns.length">
+                            <div class="example-element-detail"
+                                 [@detailExpand]="element.expandido ? 'expanded' : 'collapsed'">
+                                <div class="element-description">
+                                    <span class="element-description-attribution">{{element.detalles}}</span>
+                                </div>
+                            </div>
+                        </td>
+                    </ng-container>
 
-                            <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-                            <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-                        </table>
-                    </mat-card-content>
-                    <mat-card-actions>
-                        <mat-paginator [length]="resultsLength" [pageSize]="pageSize" [pageSizeOptions]="[10, 15, 20]" showFirstLastButtons></mat-paginator>
-                    </mat-card-actions>
-                </mat-card>
-            </mat-grid-tile>
-            <mat-grid-tile [colspan]="2" [rowspan]="1">
-                solicitante
-            </mat-grid-tile>
-            <mat-grid-tile [colspan]="2" [rowspan]="1">
-                <mat-card class="example-card">
-                    <mat-card-content style="min-height: 625px;">
-                        <table mat-table [dataSource]="parcelas" class="mat-elevation-z8">
-
-                            <!--- Note that these columns can be defined in any order.
-                                  The actual rendered columns are set as a property on the row definition" -->
-
-                            <!-- Position Column -->
-                            <ng-container matColumnDef="parcela">
-                                <th mat-header-cell *matHeaderCellDef> Parcela. </th>
-                                <td mat-cell *matCellDef="let element"> {{element.parcela}} </td>
-                            </ng-container>
-
-                            <tr mat-header-row *matHeaderRowDef="displayedColumnsParcela"></tr>
-                            <tr mat-row *matRowDef="let row; columns: displayedColumnsParcela"></tr>
-                        </table>
-                    </mat-card-content>
-                </mat-card>
-            </mat-grid-tile>
-            <mat-grid-tile [colspan]="2" [rowspan]="1">
-                Lineas de Prodducción
-            </mat-grid-tile>
-        </mat-grid-list>
+                    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+                    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+                </table>
+            </mat-card-content>
+            <mat-card-actions>
+                <mat-paginator [length]="resultsLength" [pageSize]="pageSize" [pageSizeOptions]="[10, 15, 20]" showFirstLastButtons></mat-paginator>
+            </mat-card-actions>
+        </mat-card>
     </div>
 </div>
